# kompass

./: .gitignore  LICENSE  README.md  skills-lock.json
backend/: .env.example  _brightdata_probe.py  pyproject.toml
backend/app/: config.py  db.py  logging_config.py  main.py  mcp_server.py  telemetry.py
backend/app/adapters/: db_sqlite.py  file_prompt_service.py  fli_flights.py  mcp_accommodation_service.py  mcp_flight_service.py  mcp_math_service.py  openbnb_stays.py  search_brave.py  sqlite_saved_scenario_repository.py  sqlite_trip_background_repository.py  sqlite_trip_repository.py  sqlite_user_profile_repository.py
backend/app/agent/: agent.py  dependency.py  image_agent.py  research_agent.py
backend/app/agent/prompts/: research_prompt.md  system_prompt.md
backend/app/api/: dependencies.py  routes.py
backend/app/domain/: __init__.py  accommodations.py  flights.py  itinerary.py  models.py  scenario.py  trip.py  user_preferences.py
backend/app/domain/models/: __init__.py  profile.py  saved_scenario.py  trip.py  (+1 more)
backend/app/mcp_servers/: _dev.py  accommodations_server.py  flights_server.py
backend/app/ports/: accommodation_service.py  flight_service.py  math_service.py  prompt_service.py  repository.py  saved_scenario_repository.py  search_service.py  stay_service.py  trip_background_repository.py  trip_repository.py  user_profile_repository.py
backend/scripts/: seed_e2e.py
backend/tests/: conftest.py  test_accommodations.py  test_agent.py  test_db.py  test_di.py  test_flights.py  test_image_agent.py  test_persistence.py  test_routes.py
(+85 files in other folders)
