[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.9.0",
    "langfuse>=4.9.1",
    "mcp>=1.28.0",
    "pydantic-ai>=1.107.0",
    "sqlalchemy>=2.0.51",
    "python-dotenv>=1.0.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "ag-ui-protocol>=0.1.13",
    "pydantic-settings>=2.14.2",
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.2",
    "httpx>=0.27.0",
    "pip>=26.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
